@@ -85,6 +85,8 @@ pyqtgraph-0.9.9  [unreleased]
     - Fixed AxisItem.__init__(showValues=False)
     - Fixed TableWidget append / sort issues
     - Fixed AxisItem not resizing text area when setTicks() is used
+    - Removed a few cyclic references
+    - Fixed Parameter 'readonly' option for bool, color, and text parameter types
 
 pyqtgraph-0.9.8  2013-11-24
 
